# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: check_workflows.yml
gendiff/: __init__.py  cli.py  differ.py  gendiff.py  generate_diff.py  generator.py  parser_files.py  reading_files.py  stylish.py
gendiff/formater/: formater.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/test_data/: result_json.txt  rez_diff
